--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,19 @@
 html {
   background: #242424;
-  color: red;
+  color: #EFEFEF;
+}
+
+#player-data {
+  position:absolute;
+  bottom:0px;
+  width: 200px;
+  height: 200px;
+  background-color: black;
+  border-bottom: #565656 solid 1px;
+  border-bottom: #565656 solid 1px;
+}
+
+#player-data > h3 {
+  text-align:right;
+  padding-right:20px;
 }
