--- a/static/css/map.css
+++ b/static/css/map.css
@@ -55,5 +55,12 @@
   width: 20px;
   height: 20px;
   border-radius: 10px;
-  background-color: red;
 }
+
+#system > .planet[data-type="arctic"] { background-color: #B0B0FF; }
+#system > .planet[data-type="desert"] { background-color: #f5cc4d; }
+#system > .planet[data-type="oceanic"] { background-color: #0077be; }
+#system > .planet[data-type="temperate"] { background-color: #00b300; }
+#system > .planet[data-type="tropical"] { background-color: #008000; }
+#system > .planet[data-type="rocky"] { background-color: #AA9a9a; }
+#system > .planet[data-type="volcanic"] { background-color: #C60000; }
