--- a/static/css/planet.css
+++ b/static/css/planet.css
@@ -33,10 +33,6 @@
   box-shadow: 0px 0px 50px rgba(200, 200, 255, 0.8);
 }
 
-#planet[data-type="rocky"] > .shape {
-  background: url('https://www.textures.com/system/gallery/photos/Rock/Sediment/50887/RockSediment0012_1_download600.jpg') no-repeat;
-}
-
 .shape:before {
   content: "";
   position: absolute;
@@ -45,7 +41,7 @@
   width: 90%;
   height: 90%;
   border-radius: 50%;
-  background: radial-gradient(circle at 50% 0px, #ffffff, rgba(255, 255, 255, 0) 58%);
+  background: radial-gradient(circle at 50% 0px, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0) 58%);
   -webkit-filter: blur(5px);
   z-index: 2;
 }
@@ -57,13 +53,39 @@
   height: 100%;
   top: 0;
   left: 0;
-  background: radial-gradient(circle at 50% 30%, rgba(245, 237, 48, 0), rgba(200, 190, 20, 0.2) 50%, #575300 100%);
+  background: radial-gradient(circle at 50% 30%, rgba(245, 237, 48, 0), rgba(200, 190, 20, 0) 50%, #222 100%);
 }
 .shape .shadow {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: radial-gradient(circle, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0) 50%);
+    background: radial-gradient(circle, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.4) 40%, rgba(0, 0, 0, 0.2) 50%);
     -webkit-transform: rotateX(90deg) translateZ(-160px);
     transform: rotateX(90deg) translateZ(-160px);
     z-index: 1; }
+
+#planet[data-type="arctic"] > .shape {
+  background: url('https://www.textures.com/system/gallery/photos/Rock/Sediment/50887/RockSediment0012_1_download600.jpg') no-repeat;
+}
+#planet[data-type="desert"] > .shape {
+  background: url('https://thumbs-prod.si-cdn.com/2bwj3CJjdzY5JWf8qQPqmQZTyT0=/800x600/filters:no_upscale()/https://public-media.smithsonianmag.com/filer/4e/86/4e86b49b-bfc0-442a-8bf2-47f386b53313/screen_shot_2014-01-08_at_125812_pm.png') no-repeat;
+}
+#planet[data-type="oceanic"] > .shape {
+  background: url('http://www.floorbros.com/media/catalog/Carpet_Tiles/Forbo_Carpet/Flotex_Calgary_20_x_20/Azure_T590015.jpg') no-repeat;
+}
+#planet[data-type="temperate"] > .shape {
+  background: url('http://mississippiriverdelta.org/files/2016/07/Copy-of-IMG_6504-720x480.jpg') no-repeat;
+}
+#planet[data-type="tropical"] > .shape {
+  background: url('https://upload.wikimedia.org/wikipedia/commons/3/3b/Satellite_image_of_Bangladesh_in_October_2001.jpg') no-repeat;
+}
+#planet[data-type="rocky"] > .shape {
+  background: url('https://www.textures.com/system/gallery/photos/Rock/Sediment/50887/RockSediment0012_1_download600.jpg') no-repeat;
+}
+#planet[data-type="volcanic"] > .shape {
+  background: url('http://spiralgraphics.biz/packs/terrain_volcanic_gaseous/previews/Lava%20Cracks.jpg') no-repeat;
+  box-shadow: 0px 0px 50px rgba(200, 0, 0, 0.8);
+}
+#planet[data-type="volcanic"] > .shape:before {
+  background: radial-gradient(circle at 50% 0px, rgba(50, 50, 50, 0.6), rgba(255, 255, 255, 0) 58%);
+}
