--- a/static/css/planet.css
+++ b/static/css/planet.css
@@ -22,6 +22,12 @@
   padding-left: 20px;
 }
 
+@media all and (max-width: 500px) {
+  #planet-data {
+    top: 50px;
+  }
+}
+
 .shape {
   display: inline-block;
   width: 100%;
