--- a/views/map/index.html
+++ b/views/map/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8" />
     <title>Kalaxia</title>
     <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/map.css" />
   </head>
   <body>
+    <div id="map">
+
+    </div>
+    <div id="minimap">
+
+    </div>
+    <div id="player-data">
+      <h3></h3>
+    </div>
+
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
-    <script type="text/javascript" src="/static/js/index.js"></script>
+    <script type="text/javascript" src="/static/js/map.js"></script>
   </body>
 </html>
