Implement player faction choice

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Electrolize');
 
 html {
-  background: url('https://images.designtrends.com/wp-content/uploads/2015/12/17112023/outer-space-Texture.jpg') no-repeat;
+  background: #242424;
   color: #EFEFEF;
   margin:0px;
   font-family: 'Electrolize', serif;
