--- a/views/map/planet.html
+++ b/views/map/planet.html
@@ -22,6 +22,7 @@
 
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/static/js/components/planet_resources.js"></script>
     <script type="text/javascript" src="/static/js/planet.js"></script>
   </body>
 </html>
