--- a/static/css/planet.css
+++ b/static/css/planet.css
@@ -89,28 +89,28 @@
     transform: rotateX(90deg) translateZ(-160px);
     z-index: 1; }
 
-#planet[data-type="arctic"] > .shape {
+.shape[data-type="arctic"] {
   background: url('../images/planet_type_arctic.png') no-repeat;
 }
-#planet[data-type="desert"] > .shape {
+.shape[data-type="desert"] {
   background: url('https://thumbs-prod.si-cdn.com/2bwj3CJjdzY5JWf8qQPqmQZTyT0=/800x600/filters:no_upscale()/https://public-media.smithsonianmag.com/filer/4e/86/4e86b49b-bfc0-442a-8bf2-47f386b53313/screen_shot_2014-01-08_at_125812_pm.png') no-repeat;
 }
-#planet[data-type="oceanic"] > .shape {
+.shape[data-type="oceanic"] {
   background: url('http://www.floorbros.com/media/catalog/Carpet_Tiles/Forbo_Carpet/Flotex_Calgary_20_x_20/Azure_T590015.jpg') no-repeat;
 }
-#planet[data-type="temperate"] > .shape {
+.shape[data-type="desert"] {
   background: url('http://mississippiriverdelta.org/files/2016/07/Copy-of-IMG_6504-720x480.jpg') no-repeat;
 }
-#planet[data-type="tropical"] > .shape {
+.shape[data-type="tropical"] {
   background: url('https://upload.wikimedia.org/wikipedia/commons/3/3b/Satellite_image_of_Bangladesh_in_October_2001.jpg') no-repeat;
 }
-#planet[data-type="rocky"] > .shape {
+.shape[data-type="rocky"] {
   background: url('https://www.textures.com/system/gallery/photos/Rock/Sediment/50887/RockSediment0012_1_download600.jpg') no-repeat;
 }
-#planet[data-type="volcanic"] > .shape {
+.shape[data-type="volcanic"] {
   background: url('http://spiralgraphics.biz/packs/terrain_volcanic_gaseous/previews/Lava%20Cracks.jpg') no-repeat;
   box-shadow: 0px 0px 50px rgba(200, 0, 0, 0.8);
 }
-#planet[data-type="volcanic"] > .shape:before {
+.shape[data-type="volcanic"]:before {
   background: radial-gradient(circle at 50% 0px, rgba(50, 50, 50, 0.6), rgba(255, 255, 255, 0) 58%);
 }
