--- a/static/css/registration.css
+++ b/static/css/registration.css
@@ -64,5 +64,28 @@ body {
 }
 
 #start-choices > footer {
+  margin-top: 20px;
   text-align:center;
+}
+
+#planets {
+  display: flex;
+  min-height: 300px;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+#planets .shape {
+  width: 200px;
+  height: 200px;
+  box-shadow: none;
+  background-size: cover;
+  transition: width 0.4s ease-out, height 0.4s ease-out;
+  cursor: pointer;
+}
+
+#planets .shape.selected {
+  width: 300px;
+  height: 300px;
 }
