--- a/views/register/index.html
+++ b/views/register/index.html
@@ -24,6 +24,7 @@
         </footer>
       </div>
     </div>
+    <input id="registration-step" type="hidden" value="factions" />
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="/static/js/registration.js"></script>
