--- a/views/register/planet.html
+++ b/views/register/planet.html
@@ -5,6 +5,7 @@
     <title>Kalaxia</title>
     <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
     <link rel="stylesheet" type="text/css" href="/static/css/registration.css" />
+    <link rel="stylesheet" type="text/css" href="/static/css/planet.css" />
   </head>
   <body>
     <div id="registration">
@@ -17,15 +18,17 @@
         </header>
         <section>
           <div id="planets"></div>
-          <div id="planet-descriptions"></div>
+          <div id="descriptions"></div>
         </section>
         <footer>
           <button onclick="validate();" data-translate="true">registration.validate</button>
         </footer>
       </div>
     </div>
+    <input id="registration-step" type="hidden" value="planets" />
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/static/js/components/planet_resources.js"></script>
     <script type="text/javascript" src="/static/js/registration.js"></script>
   </body>
 </html>
