--- a/views/map/planet.html
+++ b/views/map/planet.html
@@ -15,9 +15,11 @@
       <figure class="shape"><span class="shadow"></span></figure>
     </section>
     <div id="planet-data">
-      <h3></h3>
-      <em></em>
-      <ul></ul>
+      <h3 class="name"></h3>
+      <h4 class="system"></h4>
+      <h4 class="player"></h4>
+      <em class="type"></em>
+      <ul class="resources"></ul>
     </div>
 
     <script type="text/javascript" src="/config/config.js"></script>
