--- a/views/map/system.html
+++ b/views/map/system.html
@@ -13,6 +13,9 @@
     <div id="player-data">
       <h3></h3>
     </div>
+    <div id="map-link">
+      <a href="/views/map" data-translate="true">system.links.map</a>
+    </div>
 
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
