Hotfix temperate planets texture

--- a/static/css/planet.css
+++ b/static/css/planet.css
@@ -107,7 +107,7 @@
 .shape[data-type="oceanic"] {
   background: url('http://www.floorbros.com/media/catalog/Carpet_Tiles/Forbo_Carpet/Flotex_Calgary_20_x_20/Azure_T590015.jpg') no-repeat;
 }
-.shape[data-type="desert"] {
+.shape[data-type="temperate"] {
   background: url('http://mississippiriverdelta.org/files/2016/07/Copy-of-IMG_6504-720x480.jpg') no-repeat;
 }
 .shape[data-type="tropical"] {
