--- a/views/map/index.html
+++ b/views/map/index.html
@@ -19,6 +19,7 @@
 
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/static/js/components/touch_events.js"></script>
     <script type="text/javascript" src="/static/js/map.js"></script>
   </body>
 </html>
