--- a/views/map/planet.html
+++ b/views/map/planet.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="/static/js/components/planet_resources.js"></script>
+    <script type="text/javascript" src="/static/js/components/touch_events.js"></script>
     <script type="text/javascript" src="/static/js/planet.js"></script>
   </body>
 </html>
