--- a/static/css/map.css
+++ b/static/css/map.css
@@ -1,5 +1,8 @@
 html {
+  width:100%;
+  height: 100%;
   background: url('https://images.designtrends.com/wp-content/uploads/2015/12/17112023/outer-space-Texture.jpg') no-repeat;
+  overflow: hidden;
 }
 
 #map {
