--- a/views/map/planet.html
+++ b/views/map/planet.html
@@ -19,11 +19,20 @@
       <h4 class="system"></h4>
       <h4 class="player"></h4>
       <em class="type"></em>
+      <h3 data-translate="true">planet.resources</h3>
       <ul class="resources"></ul>
     </div>
+    <div id="planet-relations">
+      <h3 data-translate="true">planet.relations</h3>
+      <div class="canvas-holder" style="width:100%">
+        <canvas class="chart-area" width="500" height="500" />
+    </div>
+  </div>
 
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/static/js/lib/chart.js"></script>
+    <script type="text/javascript" src="/static/js/components/planet_relations.js"></script>
     <script type="text/javascript" src="/static/js/components/planet_resources.js"></script>
     <script type="text/javascript" src="/static/js/components/touch_events.js"></script>
     <script type="text/javascript" src="/static/js/planet.js"></script>
