--- a/static/css/registration.css
+++ b/static/css/registration.css
@@ -90,6 +90,11 @@ body {
   height: 300px;
 }
 
+.description > section {
+  display: flex;
+  justify-content: space-around;
+}
+
 .resources {
   margin-left: 20px;
 }
@@ -116,4 +121,9 @@ body {
   width: 32px;
   height: 32px;
   margin-right: 5px;
+}
+
+.relations {
+  width: 300px;
+  height: 300px;
 }
