--- a/views/register/planet.html
+++ b/views/register/planet.html
@@ -28,6 +28,8 @@
     <input id="registration-step" type="hidden" value="planets" />
     <script type="text/javascript" src="/config/config.js"></script>
     <script type="text/javascript" src="/static/js/main.js"></script>
+    <script type="text/javascript" src="/static/js/lib/chart.js"></script>
+    <script type="text/javascript" src="/static/js/components/planet_relations.js"></script>
     <script type="text/javascript" src="/static/js/components/planet_resources.js"></script>
     <script type="text/javascript" src="/static/js/registration.js"></script>
   </body>
