--- a/static/css/planet.css
+++ b/static/css/planet.css
@@ -26,7 +26,8 @@
   margin: 0px;
 }
 
-#planet-data > .system > a {
+#planet-data > .system > a,
+#planet-data > h4 > a {
   color: #8AF;
   text-decoration: none;
 }
