--- a/views/profile/index.html
+++ b/views/profile/index.html
@@ -11,6 +11,7 @@
     <div id="player">
       <div id="profile">
         <h1 class="player-name"></h1>
+        <h3><a href="/views/faction" class="faction-name"></a></h3>
       </div>
       <div id="planets">
         <header>
