--- a/views/faction/index.html
+++ b/views/faction/index.html
@@ -10,7 +10,9 @@
   <body>
     <div id="faction">
       <div id="infos">
-        <h1 class="faction-name"></h1>
+        <h1 class="faction-name">
+            <div class="faction-flag"></div>
+        </h1>
       </div>
       <div id="members">
           <header>
