--- a/static/css/faction.css
+++ b/static/css/faction.css
@@ -2,6 +2,19 @@
     margin-left: 20px;
 }
 
+.faction-name {
+    display: flex;
+    align-items: center;
+}
+
+.faction-flag {
+    width: 64px;
+    height: 64px;
+    margin-right: 20px;
+    border-radius: 40px;
+    border: 2px solid #EFEFEF;
+}
+
 .member > a {
     color: #8AF;
     text-decoration: none;
