--- a/views/map/planet.html
+++ b/views/map/planet.html
@@ -1,43 +1,50 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Kalaxia</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
-    <link rel="stylesheet" type="text/css" href="/static/css/map.css" />
-    <link rel="stylesheet" type="text/css" href="/static/css/planet.css" />
-  </head>
-  <body>
-    <div id="player-data">
-      <h3></h3>
-    </div>
-    <section id="planet">
-      <figure class="shape"><span class="shadow"></span></figure>
-    </section>
-    <div id="planet-data">
-      <h3 class="name"></h3>
-      <h4 class="system"></h4>
-      <h4 class="player"></h4>
-      <em class="type"></em>
-      <h3 data-translate="true">planet.resources</h3>
-      <ul class="resources"></ul>
-    </div>
-    <div id="planet-relations">
-      <h3 data-translate="true">planet.relations</h3>
-      <div class="canvas-holder" style="width:100%">
-        <canvas class="chart-area" width="500" height="500" />
-      </div>
-    </div>
-    <div id="planet-buildings">
-    </div>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Kalaxia</title>
+        <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
+        <link rel="stylesheet" type="text/css" href="/static/css/map.css" />
+        <link rel="stylesheet" type="text/css" href="/static/css/planet.css" />
+    </head>
+    <body>
+        <div id="player-data">
+            <h3></h3>
+        </div>
+        <div id="planet-view">
+            <header>
+                <div id="planet-buildings">
+                    <header><a href="/views/base/buildings.html" data-translate="true">planet.buildings</a></header>
+                    <section></section>
+                </div>
+            </header>
+            <div id="planet-data">
+                <h3 class="name"></h3>
+                <h4 class="system"></h4>
+                <h4 class="player"></h4>
+                <em class="type"></em>
+                <h3 data-translate="true">planet.resources</h3>
+                <ul class="resources"></ul>
+            </div>
+            <section id="planet">
+                <figure class="shape"><span class="shadow"></span></figure>
+            </section>
 
-    <script type="text/javascript" src="/config/config.js"></script>
-    <script type="text/javascript" src="/static/js/main.js"></script>
-    <script type="text/javascript" src="/static/js/lib/chart.js"></script>
-    <script type="text/javascript" src="/static/js/components/planet/buildings.js"></script>
-    <script type="text/javascript" src="/static/js/components/planet/relations.js"></script>
-    <script type="text/javascript" src="/static/js/components/planet/resources.js"></script>
-    <script type="text/javascript" src="/static/js/components/touch_events.js"></script>
-    <script type="text/javascript" src="/static/js/planet.js"></script>
+            <div id="planet-relations">
+                <h3 data-translate="true">planet.relations</h3>
+                <div class="canvas-holder" style="width:100%">
+                    <canvas class="chart-area" width="500" height="500" />
+                </div>
+            </div>
+        </div>
+
+        <script type="text/javascript" src="/config/config.js"></script>
+        <script type="text/javascript" src="/static/js/main.js"></script>
+        <script type="text/javascript" src="/static/js/lib/chart.js"></script>
+        <script type="text/javascript" src="/static/js/components/planet/buildings.js"></script>
+        <script type="text/javascript" src="/static/js/components/planet/relations.js"></script>
+        <script type="text/javascript" src="/static/js/components/planet/resources.js"></script>
+        <script type="text/javascript" src="/static/js/components/touch_events.js"></script>
+        <script type="text/javascript" src="/static/js/planet.js"></script>
   </body>
 </html>
