--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,6 +13,8 @@ body {
 
 #player-data {
   position:fixed;
+  top: 0px;
+  left: 0px;
   width: 200px;
   height: 50px;
   background-color: black;
@@ -30,3 +32,14 @@ body {
   color: #EFEFEF;
   text-decoration: none;
 }
+
+.industry-point, .credits {
+    width: 26px;
+    height: 26px;
+    background-color: #EFEFEF;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 20px;
+}
+.industry-point { background-image: url('../images/resources/industry_point.svg'); }
+.credits { background-image: url('../images/resources/credits.svg'); }
