add backlink from buidlings interface to planet

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -8,6 +8,11 @@
 
 }
 
+.buildings-list > header > h3 > a {
+    text-decoration: none;
+    color: #8AF;
+}
+
 .buildings-list > section {
     display: flex;
     flex-wrap: wrap;
