--- a/views/base/buildings.html
+++ b/views/base/buildings.html
@@ -9,6 +9,7 @@
     <body>
         <div id="player-data">
             <h3></h3>
+            <img id="logout" src="/static/images/logout.svg" onclick="logout();"/>
         </div>
 
         <div id="planet-buildings" class="buildings-list">
