--- a/views/map/index.html
+++ b/views/map/index.html
@@ -15,6 +15,7 @@
     </div>
     <div id="player-data">
       <h3></h3>
+      <img id="logout" src="/static/images/logout.svg" onclick="logout();"/>
     </div>
 
     <script type="text/javascript" src="/config/config.js"></script>
