--- a/views/map/planet.html
+++ b/views/map/planet.html
@@ -10,6 +10,7 @@
     <body>
         <div id="player-data">
             <h3></h3>
+            <img id="logout" src="/static/images/logout.svg" onclick="logout();"/>
         </div>
         <div id="planet-view">
             <header>
