--- a/views/map/system.html
+++ b/views/map/system.html
@@ -12,6 +12,7 @@
     </div>
     <div id="player-data">
       <h3></h3>
+      <img id="logout" src="/static/images/logout.svg" onclick="logout();"/>
     </div>
     <div id="map-link">
       <a href="/views/map" data-translate="true">system.links.map</a>
