--- a/views/faction/index.html
+++ b/views/faction/index.html
@@ -19,6 +19,13 @@
               <h3 data-translate="true">faction.members.title</h3>
           </header>
           <section>
+          </section>
+      </div>
+      <div id="faction-relations">
+          <header>
+              <h3 data-translate="true">faction.relations.title</h3>
+          </header>
+          <section>
 
           </section>
       </div>
