--- a/static/css/planet.css
+++ b/static/css/planet.css
@@ -107,6 +107,7 @@
 }
 
 #planet-buildings > section > .building {
+    position: relative;
     width: 64px;
     height: 64px;
     margin-top: 5px;
@@ -117,6 +118,7 @@
     background-position: 5px 5px;
     cursor: pointer;
     border-radius: 40px;
+    overflow: hidden;
 }
 
 #planet-buildings > section > .building.area {
@@ -134,6 +136,18 @@
 }
 #planet-buildings > section > .building.category-shipyard {
     background-color: #FF2828;
+}
+
+#planet-buildings > section > .building.constructing:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    background-image: url('../images/buildings/constructing.svg');
+    background-repeat: no-repeat;
+    background-position:center;
+    background-size: 56px 56px;
 }
 
 @media all and (max-width: 500px) {
