Refactor global UI style

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -5,13 +5,18 @@
 }
 
 #planet-data > header > h1 > a {
-    color: #8AF;
+    color: #E1BB81;
     text-decoration: none;
 }
 
 #points-configuration {
     width: 80%;
     margin: auto;
+    font-variant: small-caps;
+}
+
+#points-configuration > header > #available-points > span {
+    color: #E1BB81;
 }
 
 #points-configuration > section > .gauge-container {
@@ -22,7 +27,7 @@
     position: relative;
     width: 100%;
     height: 40px;
-    border: 1px solid #EFEFEF;
+    border: 1px solid #E1BB81;
 }
 
 #points-configuration > section > .gauge-container > section > .gauge > .gauge-indicator {
@@ -31,13 +36,13 @@
     width: 100%;
     text-align: center;
     font-size: 1.1em;
-    color: #8AF;
+    color: #E1BB81;
 }
 
 #points-configuration > section > .gauge-container > section > .gauge > .gauge-content {
     width: 0%;
     height: 40px;
-    background-color: #EFEFEF;
+    background-color: #242456;
 }
 
 #points-configuration > section > .gauge-container > section > .gauge > .gauge-add,
@@ -50,11 +55,11 @@
     right: 40px;
     width: 40px;
     height: 40px;
-    background-color: #565656;
-    color: #EFEFEF;
+    background-color: black;
+    color: #E1BB81;
     font-size: 2.0em;
-    border-left: 1px solid #FFF;
-    border-right: 1px solid #FFF;
+    border-left: 2px solid #E1BB81;
+    border-right: 2px solid #E1BB81;
     cursor: pointer;
     transition: background-color 0.2s ease-out;
 }
