--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -10,7 +10,7 @@
 #profile > .faction-name > a {
     display: flex;
     align-items: center;
-    color: #8AF;
+    color: #E1BB8A;
     text-decoration: none;
 }
 
