--- a/static/css/shipyard.css
+++ b/static/css/shipyard.css
@@ -1,3 +1,8 @@
+html, body, #wrapper {
+    width: 100%;
+    height: 100%;
+}
+
 #shipyard {
     display: flex;
     margin: 100px;
@@ -55,7 +60,7 @@
 }
 
 #ship-conception {
-    grid-column: 2/5;
+    grid-column: 2/6;
     grid-row: 2/5;
     display: flex;
     width: 100%;
@@ -108,7 +113,38 @@
 
 #ship-vizualizer {
     display: none;
-    flex-grow: 2;
+    width: 90%;
+    margin: auto;
+    margin-top: 0px;
+}
+
+#ship-vizualizer > header {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+#ship-stats {
+    display: flex;
+    align-items: center;
+    font-variant: small-caps;
+}
+
+#ship-stats > .stat,
+#modules > footer > .stat {
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+    background-color: #010F2A;
+    border: 1px solid #EFEFEF;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.8);
+}
+
+#ship-stats > .stat > section,
+#modules > footer > .stat > section {
+    font-size: 2em;
+    color: #E1BB8A;
 }
 
 #ship-vizualizer > header > h3 {
@@ -119,16 +155,12 @@
 
 #ship-vizualizer > section {
     position: relative;
-    height: 400px;
     margin: auto;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 #ship-image {
-    width: 90%;
-    margin: auto;
-    font-size: 10em;
-    text-align: center;
+    width: 100%;
 }
 
 #ship-image > img {
@@ -165,9 +197,9 @@
 }
 
 #ship-vizualizer > section > .slot[data-shape="circle"][data-size="small"] {
-    width: 60px;
-    height: 60px;
-    background-size: 50px;
+    width: 4%;
+    height: 20%;
+    background-size: 70%;
     border-radius: 40px;
 }
 #ship-vizualizer > section > .slot[data-shape="circle"][data-size="medium"] {
@@ -190,9 +222,9 @@
     border-radius: 5px;
 }
 #ship-vizualizer > section > .slot[data-shape="square"][data-size="medium"] {
-    width: 80px;
-    height: 80px;
-    background-size: 60px;
+    width: 5%;
+    height: 25%;
+    background-size: 70%;
     border-radius: 5px;
 }
 #ship-vizualizer > section > .slot[data-shape="square"][data-size="large"] {
@@ -203,15 +235,15 @@
 }
 
 #ship-vizualizer > section > .slot[data-shape="rectangle"][data-size="small"] {
-    width: 80px;
-    height: 60px;
-    background-size: 50px;
+    width: 5%;
+    height: 20%;
+    background-size: 90%;
     border-radius: 5px;
 }
 #ship-vizualizer > section > .slot[data-shape="rectangle"][data-size="medium"] {
-    width: 100px;
-    height: 80px;
-    background-size: 60px;
+    width: 10%;
+    height: 25%;
+    background-size: 50%;
     border-radius: 5px;
 }
 #ship-vizualizer > section > .slot[data-shape="rectangle"][data-size="large"] {
@@ -227,7 +259,123 @@
     overflow-x: scroll;
 }
 
-#ship-vizualizer > footer > .module {
+#ship-data {
+    grid-column: 1;
+    grid-row: 2/5;
+    display: none;
+    flex-grow: 1;
+    border: 1px solid #EFEFEF;
+}
+
+#ship-data > header > input {
+    width: 100%;
+    height: 40px;
+    font-size: 1.3em;
+    color: #EFEFEF;
+    background: none;
+    border: none;
+    border-bottom: 1px solid #EFEFEF;
+}
+
+#ship-data > section ,
+#ship-data > footer {
+    padding: 20px;
+}
+
+#ship-data > section > .list,
+#modules > header > .list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#ship-data > section > .list > .price,
+#modules > header > .list > .price {
+    padding: 5px;
+    margin-right: 10px;
+    margin-top: 10px;
+    border: #EFEFEF 1px solid;
+    border-radius: 5px;
+    background-color: #010F2A;
+}
+
+#ship-data > section > .list > .price > header,
+#modules > header > .list > .price > header {
+    text-align: center;
+    color: #E1BB81;
+}
+
+#ship-data > section > .list > .price > section,
+#modules > header > .list > .price > section {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+#ship-data > section > .list > .price > section > img,
+#modules > header > .list > .price > section > img {
+    width: 42px;
+    height: 42px;
+    margin: 5px;
+}
+
+#ship-data > footer > button {
+    padding: 10px 20px;
+    color: #EFEFEF;
+    font-size: 1.1em;
+    text-align: center;
+    background-color: #010F2A;
+    border: 1px solid #EFEFEF;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.8);
+}
+
+#modules {
+    display: none;
+    grid-column: 1/6;
+    grid-row: 5/7;
+    background-color: rgba(75, 75, 100, 0.4);
+    box-shadow: 0px 0px 5px rgba(0,0,0,0.6);
+    border-top: 2px solid #010F2A;
+}
+
+#modules > header {
+    width: 30%;
+}
+
+#modules > header > h3 {
+    margin: 0px;
+}
+
+#modules > header > h3:not(:empty) {
+    position: relative;
+    max-width: calc(100% - 60px);
+    height: 30px;
+    padding: 5px 0px 5px 15px;
+    background-color: #010F2A;
+    border-bottom: 3px solid #E1BB8A;
+}
+
+#modules > header > h3:not(:empty):after {
+    width: 0px;
+    height: 0px;
+    content: '';
+    position: absolute;
+    right: -40px;
+    bottom: 0px;
+    border-left: 20px solid #010F2A;
+    border-top: 20px solid #010F2A;
+    border-right: 20px solid transparent;
+    border-bottom: 20px solid transparent;
+}
+
+#modules > section {
+    width: 40%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+#modules > section > .module {
     width: 120px;
     height: 120px;
     margin-right: 10px;
@@ -236,31 +384,31 @@
     cursor: pointer;
 }
 
-#ship-vizualizer > footer > .module > div {
+#modules > section > .module > div {
     border: 2px solid #EFEFEF;
 }
 
-#ship-vizualizer > footer > .module:hover > div {
+#modules > section > .module:hover > div {
     border: 2px solid #E1BB8A;
 }
 
-#ship-vizualizer > footer > .module[data-type="weapon"] > div {
+#modules > section > .module[data-type="weapon"] > div {
     background-color: rgba(255,0,0,0.6);;
 }
 
-#ship-vizualizer > footer > .module[data-type="engine"] > div {
+#modules > section > .module[data-type="engine"] > div {
     background-color: rgba(200, 175, 100, 0.6);
 }
 
-#ship-vizualizer > footer > .module[data-type="shield"] > div {
+#modules > section > .module[data-type="shield"] > div {
     background-color: rgba(0,0,200,0.6);
 }
 
-#ship-vizualizer > footer > .module[data-type="cargo"] > div {
+#modules > section > .module[data-type="cargo"] > div {
     background-color: rgba(0,200,0,0.6);
 }
 
-#ship-vizualizer > footer > .module > .circle {
+#modules > section > .module > .circle {
     width: 80px;
     height: 80px;
     background-image: url(/static/images/shipyard/module.png);
@@ -270,7 +418,7 @@
     border-radius: 60px;
 }
 
-#ship-vizualizer > footer > .module > .square {
+#modules > section > .module > .square {
     width: 80px;
     height: 80px;
     background-image: url(/static/images/shipyard/module.png);
@@ -280,7 +428,7 @@
     border-radius: 5px;
 }
 
-#ship-vizualizer > footer > .module > .rectangle {
+#modules > section > .module > .rectangle {
     width: 100px;
     height: 80px;
     background-image: url(/static/images/shipyard/module.png);
@@ -290,7 +438,7 @@
     border-radius: 5px;
 }
 
-#ship-vizualizer > footer > .module > .hexagon {
+#modules > section > .module > .hexagon {
   position: relative;
   width: 100px;
   height: 57.74px;
@@ -300,8 +448,8 @@
   background-position: center;
 }
 
-#ship-vizualizer > footer > .module > .hexagon > .hexTop,
-#ship-vizualizer > footer > .module > .hexagon > .hexBottom {
+#modules > section > .module > .hexagon > .hexTop,
+#modules > section > .module > .hexagon > .hexBottom {
   position: absolute;
   z-index: 1;
   width: 70.71px;
@@ -315,8 +463,8 @@
 }
 
 /*counter transform the bg image on the caps*/
-#ship-vizualizer > footer > .module > .hexagon > .hexTop:after,
-#ship-vizualizer > footer > .module > .hexagon > .hexBottom:after {
+#modules > section > .module > .hexagon > .hexTop:after,
+#modules > section > .module > .hexagon > .hexBottom:after {
   content: "";
   position: absolute;
   width: 100.0000px;
@@ -330,23 +478,23 @@
   background: inherit;
 }
 
-#ship-vizualizer > footer > .module > .hexagon > .hexTop {
+#modules > section > .module > .hexagon > .hexTop {
   top: -35.3553px;
 }
 
-#ship-vizualizer > footer > .module > .hexagon > .hexTop:after {
+#modules > section > .module > .hexagon > .hexTop:after {
   background-position: center top;
 }
 
-#ship-vizualizer > footer > .module > .hexagon > .hexBottom {
+#modules > section > .module > .hexagon > .hexBottom {
   bottom: -35.3553px;
 }
 
-#ship-vizualizer > footer > .module > .hexagon > .hexBottom:after {
+#modules > section > .module > .hexagon > .hexBottom:after {
   background-position: center bottom;
 }
 
-#ship-vizualizer > footer > .module > .hexagon:after {
+#modules > section > .module > .hexagon:after {
   content: "";
   position: absolute;
   top: 0.0000px;
@@ -357,46 +505,8 @@
   background: inherit;
 }
 
-#ship-stats {
-    grid-column: 5;
-    grid-row: 2/5;
-    display: none;
-    flex-grow: 1;
-    margin: 40px;
-    border: 1px solid #EFEFEF;
-}
-
-#ship-stats > header > input {
-    width: 100%;
-    height: 40px;
-    font-size: 1.3em;
-    color: #EFEFEF;
-    background: none;
-    border: none;
-    border-bottom: 1px solid #EFEFEF;
-}
-
-#ship-stats > section ,
-#ship-stats > footer {
-    padding: 20px;
-}
-
-#ship-stats .list {
+#modules > footer {
     display: flex;
     flex-wrap: wrap;
-}
-
-#ship-stats .list > .stat {
-    padding: 10px;
-    margin: 10px;
-    text-align: center;
-    background-color: #010F2A;
-    border: 1px solid #EFEFEF;
-    border-radius: 5px;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.8);
-}
-
-#ship-stats .list > .stat > section {
-    font-size: 2em;
-    color: #E1BB8A;
+    align-items: center;
 }
