--- a/views/base/shipyard.html
+++ b/views/base/shipyard.html
@@ -34,31 +34,46 @@
                 <div id="ship-vizualizer">
                     <header>
                         <h3></h3>
+                        <div id="ship-stats"></div>
                     </header>
                     <section>
 
                     </section>
-                    <footer>
-
-                    </footer>
                 </div>
             </div>
-            <div id="ship-stats" class="module">
+            <div id="ship-data" class="module">
                 <header>
                     <input type="text" name="ship-name" placeholder="Name"/>
                 </header>
                 <section>
-                    <h3>Statistiques du vaisseau</h3>
+                    <h3>Prix</h3>
                     <div class="list"></div>
                 </section>
                 <footer>
-                    <h3>Statistiques du module</h3>
+                    <button onclick="displayFrames();">
+                        Annuler
+                    </button>
+                    <button onclick="createShipModel();">
+                        Sauvegarder
+                    </button>
+                </footer>
+            </div>
+            <div id="modules">
+                <header>
+                    <h3></h3>
                     <div class="list"></div>
+                </header>
+                <section>
+
+                </section>
+                <footer>
+
                 </footer>
             </div>
         </div>
         <script type="text/javascript" src="/config/config.js"></script>
         <script type="text/javascript" src="/static/js/main.js"></script>
+        <script type="text/javascript" src="/static/js/components/planet/resources.js"></script>
         <script type="text/javascript" src="/static/js/shipyard.js"></script>
         <script type="text/javascript">
             window.addEventListener('load', initShipyard);
